Fix unclickable area on Firefox

--- a/style.css
+++ b/style.css
@@ -92,7 +92,6 @@ main {
   margin: 80px 0;
   position: relative;
   perspective: 1500px;
-  transform-style: preserve-3d;
 }
 
 section {
